Add FlightShim module for connector federation. This includes an Apache Arrow Flight server that can load Presto Java connectors, and provide a record batch stream from the given connector split.
The FlightShim server is designed to work with a native arrow connector,
that will use a Flight client to forward the connector split to the
server and process the record batch stream. See related PR at
https://github.com/prestodb/presto/pull/26404

RFC: https://github.com/prestodb/rfcs/pull/46

Co-authored-by: Pratik Joseph Dabre <pdabre12@gmail.com>